This issue tracker has been migrated to GitHub, and is currently read-only.
For more information, see the GitHub FAQs in the Python's Developer Guide.

classification
Title: os.initgroups() doesn't accept PEP 383 usernames returned by pwd module
Type: behavior Stage:
Components: Extension Modules Versions: Python 3.2
process
Status: closed Resolution: fixed
Dependencies: Superseder:
Assigned To: Nosy List: baikie, vstinner
Priority: normal Keywords: patch

Created on 2010-08-14 19:11 by baikie, last changed 2022-04-11 14:57 by admin. This issue is now closed.

Files
File name Uploaded Description Edit
initgroups-pep383.diff baikie, 2010-08-14 19:11 Use PyUnicode_FSConverter() in initgroups()
Messages (2)
msg113921 - (view) Author: David Watson (baikie) Date: 2010-08-14 19:11
The pwd module decodes usernames using PyUnicode_DecodeFSDefault(), so initgroups() should use PyUnicode_FSConverter() for the username.  Patch attached.
msg113947 - (view) Author: STINNER Victor (vstinner) * (Python committer) Date: 2010-08-15 09:28
Commited to 3.2 as r84062. Thanks David.

(Python 3.1 has no posix.initgroups() function)
History
Date User Action Args
2022-04-11 14:57:05adminsetgithub: 53813
2010-08-15 09:28:09vstinnersetstatus: open -> closed
resolution: fixed
messages: + msg113947
2010-08-14 21:53:13pitrousetnosy: + vstinner
2010-08-14 19:11:29baikiecreate