Issue #9604: posix.initgroups() encodes the username using the fileystem encoding and surrogateescape error handler. Patch written by David Watson.